<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:title="@string/memo"
        android:elevation="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp" >

        <EditText
            android:id="@+id/editText_memo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/hint"
            android:inputType="textMultiLine" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <Button
            android:id="@+id/button_done"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/done"
            android:background="@drawable/rounded_shape"
            android:layout_margin="16dp" />

    </LinearLayout>

</LinearLayout>